M-1 chat save, messages
